test per commit

--- a/src/app/listaFuretti/listaFuretti.component.html
+++ b/src/app/listaFuretti/listaFuretti.component.html
@@ -7,3 +7,5 @@
 <!-- Qui voglio 2 pulsanti che caricheranno 2 pagine,
    di default la pagina caricata (il routerlink attivo) sarà un pannello per comprare accessori per animali,
   l'altro pulsante deve caricare un pannello contenente foto di furetti. ricorda che dovrai aggiungere tabelle di routing per gestire questa cosa-->
+
+  <!-- test per commit -->
